# Amplituda

./: LICENSE  README.md  build.gradle  configuration-build.sh  jitpack.yml  settings.gradle
amplituda/: build.gradle
amplituda/src/main/cpp/: amplituda-native-lib.cpp
amplituda/src/main/cpp/ffmpeg/arm64-v8a/include/libavutil/: parseutils.h
amplituda/src/main/java/com/linc/amplituda/: ErrorCode.java  FileManager.java  InputAudio.java  ProgressOperation.java
amplituda/src/main/java/com/linc/amplituda/callback/: AmplitudaErrorListener.java
amplituda/src/main/java/com/linc/amplituda/exceptions/: AmplitudaException.java
amplituda/src/main/java/com/linc/amplituda/exceptions/io/: InvalidAudioInputStreamException.java
amplituda/src/main/java/com/linc/amplituda/exceptions/processing/: CodecOpenException.java  PacketSubmittingException.java  UnsupportedSampleFormatException.java
app/: build.gradle  consumer-rules.pro
app/src/androidTest/java/linc/com/amplituda/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Converter.cpp  Converter.h  ErrorCode.h  amplituda-native-lib.cpp  compress_type.h  error_code.h  native-lib.cpp
app/src/main/cpp/ffmpeg/arm64-v8a/include/libavutil/: avutil.h  ffversion.h
app/src/main/cpp/ffmpeg/arm64-v8a/include/libswresample/: swresample.h
app/src/main/cpp/ffmpeg/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc
app/src/main/cpp/ffmpeg/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc
app/src/main/cpp/ffmpeg/x86/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc
app/src/main/cpp/ffmpeg/x86_64/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc
app/src/main/cpp/lame/: CMakeLists.txt  buf_manager.h  mp3codec.cpp  saka_log.h
app/src/main/cpp/lame/lameutils/: CMakeLists.txt  lame_utils.cpp  lame_utils.h  mp3file_encoder.cpp  mp3file_encoder.h  wav_tools.cpp  wav_tools.h  wavfile_encoder.cpp  wavfile_encoder.h
app/src/main/cpp/lame/libmp3lame/: CMakeLists.txt  Makefile  util.h
app/src/main/cpp/lame/libmp3lame/.deps/: VbrTag.Plo  bitstream.Plo  encoder.Plo  fft.Plo  gain_analysis.Plo  id3tag.Plo  lame.Plo  mpglib_interface.Plo  newmdct.Plo  presets.Plo  psymodel.Plo  quantize.Plo  quantize_pvt.Plo  reservoir.Plo  set_get.Plo  tables.Plo  takehiro.Plo  util.Plo  vbrquantize.Plo  version.Plo
app/src/main/cpp/lame/libmp3lame/i386/: Makefile
app/src/main/cpp/lame/libmp3lame/vector/: Makefile
app/src/main/cpp/lame/libmp3lame/vector/.deps/: xmm_quantize_sub.Tpo
app/src/main/java/linc/com/amplituda/: Amplituda.java  AmplitudaCompressOutput.java  AmplitudaJsonManager.java  AmplitudaLogger.java  AmplitudaProcessingOutput.java  AmplitudaProgressListener.java  AmplitudaResult.java  AmplitudaResultJNI.java  Cache.java  Compress.java  ErrorCode.java  FileManager.java  InputAudio.java  MemoryState.java  ProgressOperation.java  RawExtractor.java
app/src/main/java/linc/com/amplituda/callback/: AmplitudaCallback.java  AmplitudaErrorListener.java  AmplitudaProgressListener.java  AmplitudaSuccessListener.java  ErrorListener.java  ListCallback.java  StringCallback.java
app/src/main/java/linc/com/amplituda/entity/: AmplitudaProcessedEntity.java
app/src/main/java/linc/com/amplituda/exceptions/: AmplitudaException.java  InvalidFormatFlagException.java  SecondOutOfBoundsException.java
app/src/main/java/linc/com/amplituda/exceptions/allocation/: AmplitudaAllocationException.java  CodecContextAllocationException.java  FrameAllocationException.java  PacketAllocationException.java
app/src/main/java/linc/com/amplituda/exceptions/io/: AmplitudaIOException.java  CodecNotFoundException.java  CodecOpenException.java  CodecParametersException.java  DecodingException.java  ExtendedProcessingDisabledException.java  FileNotFoundException.java  FileOpenException.java  InvalidAudioByteArrayException.java  InvalidAudioInputStreamException.java  InvalidAudioUrlException.java  InvalidRawResourceException.java  NoInputFileException.java  PacketSubmittingException.java  StreamInformationNotFoundException.java  StreamNotFoundException.java  UnsupportedSampleFormatException.java
app/src/main/java/linc/com/amplituda/exceptions/processing/: CodecOpenException.java  (+12 more)
app/src/main/res/values/: strings.xml
app/src/test/java/linc/com/amplituda/: ExampleUnitTest.java
example/: build.gradle  proguard-rules.pro
example/src/androidTest/java/linc/com/example/: ExampleInstrumentedTest.java
example/src/main/: AndroidManifest.xml
example/src/main/java/linc/com/example/: MainActivity.java
example/src/main/res/layout/: activity_main.xml
example/src/main/res/values/: strings.xml
example/src/test/java/linc/com/example/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sample/: build.gradle  proguard-rules.pro
sample/src/main/java/com/linc/sample/: MainActivity.java
sample/src/main/res/values/: strings.xml
