add_definitions("-DSTDC_HEADERS")
add_library(mp3lame bitstream.c
                     encoder.c
                     fft.c
                     gain_analysis.c
                     id3tag.c
                     lame.c
                     mpglib_interface.c
                     newmdct.c
                     presets.c
                     psymodel.c
                     quantize.c
                     quantize_pvt.c
                     reservoir.c
                     set_get.c
                     tables.c
                     takehiro.c
                     util.c
                     vbrquantize.c
                     VbrTag.c
                     version.c)